rajouter page 2 et page 3. liste déroulante page d'acceuil
Signed-off-by: s-bahloul <dalidi915@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,9 @@ background-size: cover;
 background-repeat: no-repeat;
 background-position: center center;
 }
+#contour-rose{
+    background-color:  #fd40bb !important;
+}
+#text-rose{
+    color:#fd40bb !important;
+}
